init basic structure

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,67 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <script type="text/javascript" src="index.js" /></script>
-  <link rel="stylesheet" type="text/css" href="index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script type="text/javascript" src="index.js"/>
+    </script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
-  <div>hello world</div>
+<header>
+    <img src="../assets/thoughtworks-logo.svg" class="header-logo">
+    <ul class="header-navigation">
+        <li>
+            <a href="">Home</a>
+        </li>
+        <li>
+            <a href="">Promotion List</a>
+        </li>
+    </ul>
+</header>
+
+<main>
+    <div style="background-image:url('../assets/hp_banner_about_us_campaign.png')">
+        <h1>Welcome to </h1>
+        <h1> Pricing Engine Portal</h1>
+        <button>Create Promotion</button>
+    </div>
+
+    <div class="main-card-context">
+        <div class="card">
+            <img src="../assets/tw_illustration_156.jpg" width="450px" height="270">
+            <div class="card-context">
+                <h2>Title 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="../assets/tw_illustration_105.jpg" width="450px" height="270">
+            <div class="card-context">
+                <h2>Title 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="../assets/tw_illustration_72.jpg" width="450px" height="270">
+            <div class="card-context">
+                <h2>Title 1</h2>
+                <p>bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                    ut aliquip ex ea</p>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer></footer>
 </body>
 
 </html>
