finish home page

--- a/src/index.html
+++ b/src/index.html
@@ -13,28 +13,48 @@
 
 <body>
 <header>
-    <img src="../assets/thoughtworks-logo.svg" class="header-logo">
-    <ul class="header-navigation">
-        <li>
-            <a href="">Home</a>
-        </li>
-        <li>
-            <a href="">Promotion List</a>
-        </li>
-    </ul>
+    <div class="header">
+        <div class="header-content">
+            <img src="../assets/thoughtworks-logo.svg" class="header-content-logo">
+        </div>
+        <div class="header-navigation">
+            <nav class="header-navigation-content">
+                <ul class="header-navigation-list">
+                    <li class="header-navigation-list-item">
+                        <a href="index.html" class="high-light-list-item">
+                            <div>
+                                <span>Home</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="header-navigation-list-item">
+                        <a href="./promotion/index.html">
+                            <div>
+                                <span>Promotion List</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </header>
 
 <main>
-    <div style="background-image:url('../assets/hp_banner_about_us_campaign.png')">
-        <h1>Welcome to </h1>
-        <h1> Pricing Engine Portal</h1>
-        <button>Create Promotion</button>
+    <div class="main-content-welcome">
+        <div class="main-content-welcome-word">
+            <h1>Welcome to </h1>
+            <h2>Pricing Engine Portal</h2>
+        </div>
+        <div class="main-content-btn-div">
+            <button class="main-content-btn">Create Promotion</button>
+        </div>
     </div>
 
-    <div class="main-card-context">
+    <div class="main-card-content">
         <div class="card">
             <img src="../assets/tw_illustration_156.jpg" width="450px" height="270">
-            <div class="card-context">
+            <div class="card-content">
                 <h2>Title 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -44,7 +64,7 @@
 
         <div class="card">
             <img src="../assets/tw_illustration_105.jpg" width="450px" height="270">
-            <div class="card-context">
+            <div class="card-content">
                 <h2>Title 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim </p>
@@ -53,7 +73,7 @@
 
         <div class="card">
             <img src="../assets/tw_illustration_72.jpg" width="450px" height="270">
-            <div class="card-context">
+            <div class="card-content">
                 <h2>Title 1</h2>
                 <p>bore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                     ut aliquip ex ea</p>
