--- a/src/promotion/index.html
+++ b/src/promotion/index.html
@@ -5,13 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="/test/index.js" ></script>
-    <link rel="stylesheet" type="text/css" href="/test/index.css">
     <title>Document</title>
+    <script type="text/javascript" src="index.js"/>
+    </script>
+    <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 
 <body>
-<div class="test">test</div>
+<header>
+    <div class="header">
+        <div class="header-content">
+            <img src="../../assets/thoughtworks-logo.svg" class="header-content-logo">
+        </div>
+        <div class="header-navigation">
+            <nav class="header-navigation-content">
+                <ul class="header-navigation-list">
+                    <li class="header-navigation-list-item">
+                        <a href="../index.html">
+                            <div>
+                                <span>Home</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="header-navigation-list-item">
+                        <a href="index.html" class="high-light-list-item">
+                            <div>
+                                <span>Promotion List</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+
+<main>
+</main>
+
+<footer></footer>
 </body>
 
 </html>
