--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li class="header-navigation-list-item">
-                        <a href="./promotion/index.html">
+                        <a href="./promotion/list.html">
                             <div>
                                 <span>Promotion List</span>
                             </div>
