--- a/src/promotion/list.html
+++ b/src/promotion/list.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <script type="text/javascript" src="index.js"/>
     </script>
+    <link rel="stylesheet" type="text/css" href="./list.css">
     <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 
