add filter button

--- a/src/promotion/list.html
+++ b/src/promotion/list.html
@@ -42,6 +42,14 @@
 </header>
 
 <main>
+    <div class="filter-button">
+        <div class="button-block"><button>All</button></div>
+        <div class="button-block"><button>Discount Type</button></div>
+        <div class="button-block"><button>Reduction Type</button></div>
+    </div>
+    <div>
+
+    </div>
 </main>
 
 <footer></footer>
