--- a/src/promotion/index.html
+++ b/src/promotion/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <script type="text/javascript" src="index.js"/>
     </script>
-    <link rel="stylesheet" type="text/css" href="./list.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
     <link rel="stylesheet" type="text/css" href="../index.css">
 </head>
 
