add two new page

--- a/src/promotion/index.html
+++ b/src/promotion/index.html
@@ -48,10 +48,34 @@
         <div class="button-block"><button>Reduction Type</button></div>
     </div>
     <div>
-
+        <table class="data-table">
+            <tr>
+                <td>id</td>
+                <td>Title</td>
+                <td>StartDate</td>
+                <td>EndDate</td>
+                <td>Type</td>
+                <td>Description</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>promotion 1</td>
+                <td>2022.07.12</td>
+                <td>202207.12</td>
+                <td>discount</td>
+                <td>hello</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>promotion 2</td>
+                <td>2022.07.12</td>
+                <td>2022.07.12</td>
+                <td>reduction</td>
+                <td>hello</td>
+            </tr>
+        </table>
     </div>
 </main>
-
 <footer></footer>
 </body>
 
