--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -42,40 +42,23 @@
 </header>
 
 <main>
-    <div class="filter-button">
-        <div class="button-block"><button>All</button></div>
-        <div class="button-block"><button>Discount Type</button></div>
-        <div class="button-block"><button>Reduction Type</button></div>
-    </div>
-    <div>
-        <table class="data-table">
-            <tr>
-                <td>id</td>
-                <td>Title</td>
-                <td>StartDate</td>
-                <td>EndDate</td>
-                <td>Type</td>
-                <td>Description</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>promotion 1</td>
-                <td>2022.07.12</td>
-                <td>202207.12</td>
-                <td>discount</td>
-                <td>hello</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>promotion 2</td>
-                <td>2022.07.12</td>
-                <td>2022.07.12</td>
-                <td>reduction</td>
-                <td>hello</td>
-            </tr>
-        </table>
+    <div class="form-content">
+        <form class="create-promotion-form">
+            <ul>
+                <li><label for="title">Title</label><input type="text"></li>
+                <li><label for="priority">Priority</label><input type="text"></li>
+                <li><label for="startDate">StartDate</label><input type="text"></li>
+                <li><label for="endDate">endDate</label><input type="text"></li>
+                <li><label for="Enabled">Enabled</label><input type="radio"></li>
+                <li><label for="description">Description</label><input type="text"></li>
+                <li><label for="discountType">DiscountType</label><input type="text"></li>
+                <li><label for="discountRate">Discount Rate</label><input type="text"></li>
+                <li><label for="vipOnly">Vip Only?</label><input type="radio"></li>
+            </ul>
+        </form>
     </div>
 </main>
+
 <footer></footer>
 </body>
 
