--- a/src/promotion/index.html
+++ b/src/promotion/index.html
@@ -42,38 +42,50 @@
 </header>
 
 <main>
-    <div class="filter-button">
-        <div class="button-block"><button>All</button></div>
-        <div class="button-block"><button>Discount Type</button></div>
-        <div class="button-block"><button>Reduction Type</button></div>
-    </div>
-    <div>
-        <table class="data-table">
-            <tr>
-                <td>id</td>
-                <td>Title</td>
-                <td>StartDate</td>
-                <td>EndDate</td>
-                <td>Type</td>
-                <td>Description</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>promotion 1</td>
-                <td>2022.07.12</td>
-                <td>202207.12</td>
-                <td>discount</td>
-                <td>hello</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>promotion 2</td>
-                <td>2022.07.12</td>
-                <td>2022.07.12</td>
-                <td>reduction</td>
-                <td>hello</td>
-            </tr>
-        </table>
+    <div class="main-table-content">
+        <div class="filter-button-list">
+            <div class="button-block">
+                <button class="filter-button">All</button>
+            </div>
+            <div class="button-block">
+                <button class="filter-button">Discount Type</button>
+            </div>
+            <div class="button-block">
+                <button class="filter-button">Reduction Type</button>
+            </div>
+        </div>
+        <div class="table-block">
+            <table class="data-table">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>StartDate</th>
+                    <th>EndDate</th>
+                    <th>Type</th>
+                    <th>Description</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>promotion 1</td>
+                    <td>2022.07.12</td>
+                    <td>202207.12</td>
+                    <td>discount</td>
+                    <td>hello</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>promotion 2</td>
+                    <td>2022.07.12</td>
+                    <td>2022.07.12</td>
+                    <td>reduction</td>
+                    <td>hello</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </main>
 <footer></footer>
