fix navigation center issue

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <div class="header">
-        <div class="header-content">
+        <div class="header-logo-block">
             <img src="assets/thoughtworks-logo.svg" class="header-content-logo">
         </div>
         <div class="header-navigation">
@@ -37,6 +37,7 @@
                 </ul>
             </nav>
         </div>
+        <div class="header-blank-block"></div>
     </div>
 </header>
 
