--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div class="header">
-        <div class="header-content">
+        <div class="header-logo-block">
             <img src="../../assets/thoughtworks-logo.svg" class="header-content-logo">
         </div>
         <div class="header-navigation">
