--- a/src/promotion/index.html
+++ b/src/promotion/index.html
@@ -22,14 +22,14 @@
             <nav class="header-navigation-content">
                 <ul class="header-navigation-list">
                     <li class="header-navigation-list-item">
-                        <a href="../index.html">
+                        <a href="index.html" class="high-light-list-item">
                             <div>
                                 <span>Home</span>
                             </div>
                         </a>
                     </li>
                     <li class="header-navigation-list-item">
-                        <a href="index.html" class="high-light-list-item">
+                        <a href="./promotion/index.html">
                             <div>
                                 <span>Promotion List</span>
                             </div>
@@ -38,6 +38,7 @@
                 </ul>
             </nav>
         </div>
+        <div class="header-blank-block"></div>
     </div>
 </header>
 
