--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -45,17 +45,45 @@
 <main>
     <div class="form-content">
         <form class="create-promotion-form">
-            <ul>
-                <li><label for="title">Title</label><input type="text"></li>
-                <li><label for="priority">Priority</label><input type="text"></li>
-                <li><label for="startDate">StartDate</label><input type="text"></li>
-                <li><label for="endDate">endDate</label><input type="text"></li>
-                <li><label for="Enabled">Enabled</label><input type="radio"></li>
-                <li><label for="description">Description</label><input type="text"></li>
-                <li><label for="discountType">DiscountType</label><input type="text"></li>
-                <li><label for="discountRate">Discount Rate</label><input type="text"></li>
-                <li><label for="vipOnly">Vip Only?</label><input type="radio"></li>
-            </ul>
+            <div class="create-promotion-form-detail">
+                <ul>
+                    <li><label for="title">Title</label><input id="title" type="text"></li>
+                    <li><label for="priority">Priority</label><input id="priority" type="text"></li>
+                    <li><label for="startDate">StartDate</label><input id="startDate" type="text"></li>
+                    <li><label for="endDate">EndDate</label><input id="endDate" type="text"></li>
+                    <li><label for="enabled">Enabled</label>
+                        <div id="enabled" class="single-selector-list">
+                            <div class="single-selector">
+                                <label for="enabled-true">Yes</label>
+                                <input value="true" type="radio" name="enabled" id="enabled-true">
+                            </div>
+                            <div class="single-selector">
+                                <label for="enabled-false">No</label>
+                                <input value="false" type="radio" name="enabled" id="enabled-false">
+                            </div>
+                        </div>
+                    </li>
+                    <li><label for="description">Description</label><textarea id="description" type="text"></textarea></li>
+                </ul>
+                <ul>
+                    <li><label for="discountType">DiscountType</label>
+                        <select id="discountType" name="discountType">
+                            <option selected>Discount</option>
+                            <option>Reduction</option>
+                        </select>
+                    </li>
+                    <li><label for="discountRate">Discount Rate</label><input id="discountRate" type="text"></li>
+                    <li><label for="vipOnly">Enabled</label>
+                        <div id="vipOnly" class="single-selector-list">
+                            <label for="vipOnly-true">Yes</label>
+                            <input value="true" type="radio" name="enabled" id="vipOnly-true">
+                            <label for="vipOnly-false">No</label>
+                            <input value="false" type="radio" name="enabled" id="vipOnly-false">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <input type="submit" class="submit-btn">
         </form>
     </div>
 </main>
