fix a href issue and add json-server

--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -16,20 +16,22 @@
 <header>
     <div class="header">
         <div class="header-logo-block">
-            <img src="../../assets/thoughtworks-logo.svg" class="header-content-logo">
+            <a href="../index.html">
+                <img src="../../assets/thoughtworks-logo.svg" class="header-content-logo">
+            </a>
         </div>
         <div class="header-navigation">
             <nav class="header-navigation-content">
                 <ul class="header-navigation-list">
                     <li class="header-navigation-list-item">
-                        <a href="index.html" class="high-light-list-item">
+                        <a href="../index.html">
                             <div>
                                 <span>Home</span>
                             </div>
                         </a>
                     </li>
                     <li class="header-navigation-list-item">
-                        <a href="./promotion/index.html">
+                        <a href="../promotion/index.html">
                             <div>
                                 <span>Promotion List</span>
                             </div>
