--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <h2>Pricing Engine Portal</h2>
         </div>
         <div class="main-content-btn-div">
-            <button class="main-content-btn">Create Promotion</button>
+            <a href="./create-promotion/index.html" class="main-content-btn">Create Promotion</a>
         </div>
     </div>
 
