fix css for submit btn

--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -85,7 +85,9 @@
                     </li>
                 </ul>
             </div>
-            <input type="submit" class="submit-btn">
+            <div class="submit-block">
+                <input type="submit" class="submit-btn">
+            </div>
         </form>
     </div>
 </main>
