fix css for submit btn

--- a/src/create-promotion/index.html
+++ b/src/create-promotion/index.html
@@ -86,7 +86,7 @@
                 </ul>
             </div>
             <div class="submit-block">
-                <input type="submit" class="submit-btn">
+                <input type="submit" class="submit-btn" value="Submit">
             </div>
         </form>
     </div>
